Diseño Web adaptable
Incluye el marco, el diseño adaptable y el autor

--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,2 +1,2 @@
 <p class="respuesta"><%= respuesta %></p>
-    	<a href="/quizes/question" title="Volver atras">Inténtelo otra vez! </a>
+    	<a href="/quizes/question" title="Volver atras">Inténtalo otra vez! </a>
